--- a/css/default.css
+++ b/css/default.css
@@ -167,7 +167,7 @@ label {
 .pd-title.h2 {
   font-family: helvetica-neue-thin, sans-serif;
   text-align: left;
-  color: #515151;
+  color: #474747;
   margin: 0 0 10px 0;
 }
 
@@ -200,10 +200,12 @@ label {
   padding: 5px 15px;
 }
 
-/*.vaycay {*/
-  /*width: 100%;*/
-  /*height: 100px;*/
-/*}*/
+#map {
+  width: 100%;
+  height: 400px;
+  margin: 50px 0;
+
+}
 
 .footer {
   width: 100%;
@@ -244,6 +246,6 @@ label {
     width: 100%;
   }
   .flight-card {
-    margin: 20px 0 0 30px;
+    margin: 20px 0 0 40px;
   }
 }
