--- a/css/default.css
+++ b/css/default.css
@@ -78,7 +78,7 @@ form {
   background: rgba(255, 255, 255, 0.07);
 }
 
-h4 {
+h4.sf-title {
   font-weight: bold;
   font-family: helvetica-neue-thin, sans-serif;
 }
@@ -200,11 +200,71 @@ label {
   padding: 5px 15px;
 }
 
-#map {
-  width: 100%;
-  height: 400px;
-  margin: 50px 0;
+.exotic-title {
+  font-family: helvetica-neue-thin, sans-serif;
+  color: #474747;
+}
 
+.exotic-grid {
+  width: 100%;
+}
+
+#map {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+}
+
+.exotic-col {
+  height: 675px;
+  margin: 15px 0 50px 0;
+}
+
+.exotic-img {
+  /*background: url('greece.jpg') no-repeat;*/
+  /*background-size: cover;*/
+  border-right: 15px solid #fff;
+}
+
+.exotic-description {
+  background-color: rgba(0, 0, 0, 0.55);
+  color: #ffffff;
+  text-align: left;
+  margin: 10px 0;
+}
+
+.plane-logo-exotic {
+  height: 21px;
+}
+
+.exotic-button {
+  float: right;
+}
+
+.exotic-btn {
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0);
+  border: 1px solid #fff;
+  margin: -5px 0 10px 0;
+  font-size: 15px;
+}
+
+.exotic-stays-info {
+  margin: -5px 0 0 0;
+  font-weight: bold;
+}
+
+.exotic-cost {
+  float: right !important;
+}
+
+.exotic-booking {
+  font-weight: bold;
+}
+
+.booking {
+  float: right;
+  font-weight: normal;
 }
 
 .footer {
